force-app/main/default/objects/CC_Enrollment__c/CC_Enrollment__c.object-meta.xml
<CustomObject>
    <description>A learner's registration for a Course Offering as a whole package (not a per-session record). / 受講者による開講（研修パッケージ全体）への申込・登録。回ごとの記録ではない。</description>
    <label>Enrollment</label>
    <nameField>
        <label>Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>