force-app/main/default/objects/CC_Enrollment__c/fields/ActualSessions__c.field-meta.xml
<CustomField>
    <fullName>ActualSessions__c</fullName>
    <description>Actual number of sessions attended, auto-calculated from Attendance records. / 配下の出席記録のうち出席がチェックされたものの件数を自動集計。「受講登録」という名称だが、受講実績を記録する用途でも使用する。</description>
    <inlineHelpText>自動計算のため入力不要（Automatically calculated; no input needed）。</inlineHelpText>
    <label>Actual Sessions</label>
    <summaryFilterItems>
        <field>CC_Attendance__c.Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CC_Attendance__c.CC_Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>