force-app/main/default/objects/CC_Enrollment__c/fields/CC_CourseOffering__c.field-meta.xml
<CustomField>
    <fullName>CC_CourseOffering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The course offering this enrollment is for. / 対象となる開講。</description>
    <inlineHelpText>Select the course offering. / 対象の開講を選択してください。</inlineHelpText>
    <label>Course Offering</label>
    <referenceTo>CC_CourseOffering__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>