force-app/main/default/objects/CC_Enrollment__c/fields/EnrollmentDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentDate__c</fullName>
    <description>The date this enrollment was made. / 受講登録を行った日付。</description>
    <inlineHelpText>Enter the date of enrollment. / 登録日を入力してください。</inlineHelpText>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>