force-app/main/default/objects/CC_Enrollment__c/fields/InstructorComments__c.field-meta.xml
<CustomField>
    <fullName>InstructorComments__c</fullName>
    <description>The instructor's overall evaluation/comments. / 講師からの評価・総評。</description>
    <inlineHelpText>Record the instructor's overall comments. / 講師からのコメントを記載してください。</inlineHelpText>
    <label>Instructor Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>