force-app/main/default/objects/CC_Enrollment__c/fields/IsScenarioRecord__c.field-meta.xml
<CustomField>
    <fullName>IsScenarioRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this record is part of a fictional business scenario (and therefore requires a ScenarioMemo__c entry). / このレコードが架空の業務シナリオを構成するデータかどうか(該当する場合はScenarioMemo__cへの記録も必須)。</description>
    <inlineHelpText>Check if this record is part of a business scenario; if checked, also fill in Scenario Memo. / 業務シナリオを構成するレコードの場合はチェックし、あわせてシナリオメモも記入してください。</inlineHelpText>
    <label>Scenario Record</label>
    <type>Checkbox</type>
</CustomField>