force-app/main/default/objects/CC_Enrollment__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The learner who enrolled. / 受講登録した受講者。</description>
    <inlineHelpText>Select the learner. / 受講者を選択してください。</inlineHelpText>
    <label>Learner</label>
    <referenceTo>CC_Learner__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>