force-app/main/default/objects/CC_Enrollment__c/fields/LearnerComments__c.field-meta.xml
<CustomField>
    <fullName>LearnerComments__c</fullName>
    <description>The learner&apos;s overall reflection/comments. / 受講者本人の振り返りや総評。</description>
    <inlineHelpText>Record the learner&apos;s overall comments. / 受講者本人のコメントを記載してください。</inlineHelpText>
    <label>Learner Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>