force-app/main/default/objects/CC_Enrollment__c/fields/PlannedSessions__c.field-meta.xml
<CustomField>
    <fullName>PlannedSessions__c</fullName>
    <description>Total sessions planned, from the related Course Offering. / 開講オブジェクトに設定された全予定回数を参照。</description>
    <inlineHelpText>自動計算のため入力不要（Automatically calculated; no input needed）。</inlineHelpText>
    <label>Planned Sessions</label>
    <formula>CourseOffering__r.TotalSessions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>