force-app/main/default/objects/CC_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Learner__c</columns>
    <columns>CC_CourseOffering__c</columns>
    <columns>Status__c</columns>
    <columns>EnrollmentDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>